# MatrixLib

./: .gitignore  CMakeLists.txt  main.cpp  matrix.cpp  matrix.hpp
include/matlib/: matrix.hpp
src/: CMakeLists.txt  matrix.cpp
tests/: CMakeLists.txt  test_arithmetic.cpp  test_construction.cpp  test_fixtures.hpp  test_iterators.cpp  test_misc.cpp  test_norm.cpp  test_utility.cpp  tests.cpp  tests_basic.cpp
